# end-to-end-churn-predictive-system

./: README.md  pyproject.toml  requirements.txt
data/processed/: X_test.csv  X_train.csv  X_val.csv  split_metadata.json  y_test.csv  y_train.csv  y_val.csv
notebooks/: e2e_workflow.ipynb
scripts/: finalize.py  prepare_data.py  train.py  tune.py
src/: config.py  data.py  evaluate.py  interpret.py  models.py  preprocess.py  utils_paths.py
